k8s/services/edge-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      labels:
        app: edge-service
    spec:
      containers:
        - name: edge-service
          # ECR 이미지 주소로 수정
          image: 730335665695.dkr.ecr.ap-northeast-2.amazonaws.com/edge-service:latest
          # EKS에서는 Always를 권장
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
          # 리소스 제한 추가
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          # 헬스체크 추가
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 70
            periodSeconds: 20
            timeoutSeconds: 5         # 타임아웃 추가
            failureThreshold: 3       # 실패 허용 횟수
