k8s/services/edge-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-service
spec:
  type: LoadBalancer
  selector:
    app: edge-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
